refactor new resolve